--- a/_includes/450/8-26-2019.md
+++ b/_includes/450/8-26-2019.md
@@ -1,1 +1,5 @@
 _8-26-2019_
+
+|         | human             | ideal (Logical) |
+| thought | cognitive science |                 |
+| action  | turing test       | rational agents |
