--- a/_includes/450/8-26-2019.md
+++ b/_includes/450/8-26-2019.md
@@ -1,5 +1,16 @@
 _8-26-2019_
 
 |         | human             | ideal (Logical) |
-| thought | cognitive science |                 |
-| action  | turing test       | rational agents |
+| ----------- | ------------- | --------------- | 
+| **thought** | cognitive science, cognitive models |   proofs              |
+| **action**  | turing test (mental health services)      | rational agents (cars) |
+
+Most of the things we deal with fall in the Action realm. 
+What do we need in a given system and why? Do militairy robots need to be stricly logical or follow a human element? 
+Do tutors need humanlike behavior or strictly logical? Probably want an 
+engaging humanlike figure. 
+
+## Turing Test
+When interacting with computer, that system will pass the turing test 
+if you can not tell if it is human or computer. How does it hold up 
+against ethical questions? Humor? Reasoning?
