--- a/_includes/475/8-27-2019.md
+++ b/_includes/475/8-27-2019.md
@@ -1,2 +1,60 @@
 *8-27-2019*
 
+## What is a game
+* Volunary attempt to overcome unnecessary obstacles
+* Series of interesting decisions- Sid Meier
+* Closed formal system that engages players in a structurd conflict
+* Activy engaged in for diversion or amusement
+
+### What do people enjoy about games?
+* Immersion
+* Narrative
+* Art
+* Excitement
+* etc
+
+## History
+
+* First game? Tennis for 2. 
+* Space war- 1960's MIT student project game, spread to other research labs
+* Pong- Started as successful arcade game, made to homes in 1975 and was expensive
+* Colossal Cave adventure- Still running on huge expensive computers
+    * Sparked interest in text adventure games
+* Space invader- Insanely popular arcade game
+    * One of the most profitable games in history
+    * First shooter
+    * Unintentionally gets faster because less things are on screen 
+* Pacman- Incredibly popular
+    * Another best seller 
+    * Not based on shooting or sports so it appealed to broader audience
+* Rogue- Everything is randomly generated
+    * Control hero who explored dungeon
+    * Rooms are dark until explored
+    * 1980 college student project
+* Donkey Kong- First platform game, jumping
+    * Introduced mario essentially
+    * Introduced different stage designes
+* ET- known as one of the worst games ever
+    * The movie was very good so they made a game
+    * Developed in 5.5 weeks to meet Christmas deadline
+    * Printed tons of copies that never sold
+    * Famous fact that they were burried in a landfill
+    * Made for atari 2600
+* 3d graphics type game
+* Tetris- Ported everywhere, addicting game
+    * Shipped with the gameboy
+    * Created by USSR scientest in 1984
+* Oregon trail- made by history teachers
+    * Watch time pass and try to resolve passing issues
+* Mario Bros- Hugely influential
+    * Shipped with NES 
+    * Inspired tons of games in platforming (Sonice)
+    * Best selling game up until Wii Sports (Not most profitable though since kinda free)
+    * in 1990 Mario was more recognized than Mickey Mouse
+* Legend of Zelda- Big world to explore on a console
+    * Very influential, action adventure start
+* Dragon Quest- JRPG
+    * Gain experience points, level up, become better at fighting
+    * Explore map to find better items
+* Metal Gear- Stealth oriented
+    * 
