--- a/_includes/420/8-27-2019.md
+++ b/_includes/420/8-27-2019.md
@@ -1,1 +1,111 @@
 *8-27-2019*
+
+## Be a Team Player
+emphasis on team aspects
+
+## UML
+* Describing system at high level of abstraction
+    * Model of the system
+    * Used for requirements and Specification
+* Many notations over time
+    * State machines
+    * Entity relationship diagrams
+    * Dataflow diagrams- what info needs sent to do a task 
+### History
+* Rise of OOP
+* New class of modeling 
+* tons of new modeling languages (over 50,000)
+* 3 leading OO notations decide to merge
+
+* UML stands for **Unified Modeling Language**
+* Design by committee
+    * Many interest groups participating
+    * Everyon contributes and resulting design is huge
+    * Some call it **Union of all Modeling Languages**
+
+### Explanation- use case
+* Elements
+    * Actors- click buttons
+    * Use Cases- Certain actors can perform certain cases
+    * Relations
+    * EX: Students can submit to autolab, professors can grade 
+
+| Waiter | Client | Cashier | Chef |
+| ------ | ------ | ------- | ---- |
+|serves food | eats food | transaction | cooks food|
+
+### Project and resource management system
+* Resource manager manages resources
+* Project manager manges projects
+* Sysadmin is responsible for administrative functions of the system
+* Backup system houses backup data for the system
+
+*48:00 of recording, see photo*
+
+### Class Diagrams
+* Describes classes (OO)
+* Static
+    * Displays what interactics but not what happens when they interact
+* Each box is a class
+    * List Fields
+    * List methods
+### Association, Aggregation, Composition
+* There are different notations and shapes to express each
+EX: One car-4 wheels; Project has 1 consultant
+
+### Generalization
+* Interactions between classes
+* RequestButton- Specific type of button etc
+
+### Goal
+* Software that can model itself using UML
+
+### Object Diagram
+* Instantiation of class diagram (Now obsolete)
+
+## Semantic Versioning
+* How do we version our software?
+    * Semantic Versioning: Version 4.1 
+    * MAJOR.MINOR.PATCH are each important numbers
+    * Major- 1.7.2 to 2.0.0 means incompatable API update, could potentially break software!!
+    * Minor- Add funcitonality in a backwards compatible manner
+    * Patch- Version when you make backwards compatable bug fixes
+* Additional things could be specified for pre-release
+* We start at 1.0
+
+### Dependencies
+* Dependency hell- Need specific version of piece of software. Gets worse as software grows
+* Want things labeled correctly 
+* Want several open source dependencies 
+* Version Lock- Inability to update a package
+* Version promiscuity means that versions are labeled too loosely
+* For semantic versioning we need a public API- some functionality 
+    * In a perfect world Killian takes our model and plugs in his own view and has his app work with our data. Seemless
+* Write an internal API for model manipulation
+    * Keep track of classes and info they contain
+    * Abstract entity that we can manipulate
+* API can be documented or code-enforced
+* Increment the correct part of the version number when any public changes are made
+* All strict specification is laid out in slides
+
+## GIT Version Control
+Distrubuted version control
+
+### General Workflow
+* Initial Commit-0______________________
+    * branch: Feature/zoppetti/api-0-0-0^
+    * branch: Feature/killian/controller-0-0-0-0-0-0
+    * branch: Feature/schwartz/tests-0-0-0-0
+* Notice: Feature branches for every person and their task
+* Main line: called **develop branch**
+* Once we wanna release we merge to master, where we tag our releases
+* Can't merge into develop without passing tests!
+* **Origin** is always Github
+    * Each person communicates with Github
+    * Its possible to communicate only with other computers instead of origin but we will not do that
+    * Master is only used for production releases themselves
+    * **Never** commit a feature directly to develop. Make a branch then later merge
+* Emphasis on **Parallel Development**
+* Hotfix branch is for bug fixes
+    * Bug fixes are off master
+
