--- a/_includes/475/8-27-2019.md
+++ b/_includes/475/8-27-2019.md
@@ -57,4 +57,27 @@
     * Gain experience points, level up, become better at fighting
     * Explore map to find better items
 * Metal Gear- Stealth oriented
-    * 
+* Street fighter- first notable fighting game
+    * Arcade game, 2 players, different combos and timing
+    * Lots of skill
+* Sim city- City building game where you drop different things in the world
+* Real time strategy games
+* Doom- not first FPS but the popular and influential one
+    * Appears to be 3D graphics, kinda cheating though
+    * Had to be banned in offices because people played it so much
+    * More modifiable by users, had level editor
+    * Multiplayer games over network (unheard of), connected through modem
+    * Connect to others via phone number, up to 4 players
+* Mist- adventure game, point and click adventure
+    * Pseudo 3D
+* Resident Evil- Survival Horror
+* Rythm games
+* Half Life- Revolutionary FPS and real story
+    * Modded into Counter Strike
+* Everquest- First super important MMO
+* GTA 3- First one that was 3D and widely played
+    * First successful open world sandbox, do whatever
+* Starcraft
+* Angry Birds- mobile phone, casual audience
+* Farmville- Implemented into facebook, played by very casual people who may not consider themselves gamers
+* Minecraft- Single dev, hobby, one of the best selling ever 
