--- a/_includes/420/8-27-2019.md
+++ b/_includes/420/8-27-2019.md
@@ -1,4 +1,9 @@
 *8-27-2019*
+<audio controls>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 
 ## Be a Team Player
 emphasis on team aspects
