--- a/_includes/420/8-27-2019.md
+++ b/_includes/420/8-27-2019.md
@@ -1,6 +1,6 @@
 *8-27-2019*
 <audio controls>
-  <source src="420_8-27-2019.mp3" type="audio/mpeg">
+  <source src="/_includes/420/420_8-27-2019.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
