--- a/_includes/420/8-27-2019.md
+++ b/_includes/420/8-27-2019.md
@@ -1,6 +1,6 @@
 *8-27-2019*
 <audio controls>
-  <source src="/Senior-Year-Notes/audio/420_8-27-2019.mp3" type="audio/mpeg">
+  <source src="/Senior-Year-Notes/audio/420_8-27-2019.mp3" type="audio/mp3">
 Your browser does not support the audio element.
 </audio>
 
