--- a/_includes/420/8-27-2019.md
+++ b/_includes/420/8-27-2019.md
@@ -5,7 +5,7 @@ Your browser does not support the audio element.
 </audio>
 
 ## Be a Team Player
-emphasis on team aspects
+Emphasis on team aspects
 
 ## UML
 * Describing system at high level of abstraction
