added audio for ai

--- a/_includes/450/8-28-2019.md
+++ b/_includes/450/8-28-2019.md
@@ -1,4 +1,8 @@
 #### _8-28-2019_
+<audio controls>
+  <source src="/Audio/450-8-28-2019.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
 
 The finish line for AI is always being pushed back. First a chess winning AI was thought as impossible, then things like jeapardy etc. Constantly changing. 
 
