--- a/_includes/475/8-29-2019.md
+++ b/_includes/475/8-29-2019.md
@@ -1,2 +1,100 @@
 #### *8-29-2019*
 
+## What makes games different than other entertainment?
+* Mechanics- rules of interacting between player and game
+* Aesthetics- how our senses percieve the game 
+* Technology- how it actually functions
+* Narrative- the story of the game
+
+### These things are broken into 3 layers
+* Inscribed layer- MATN that we have most control over
+    * We build into the software
+* Dynamic layer- MATN that is being played, player essentially builds this as they play
+    * We have to forecast what the players experience will be in this layer
+* Cultural layer- people get together in groups about this game and form their own games 
+
+#### We focus primarily on the Inscribed layer
+* Not every game has every element
+
+## Mechanics
+* Objectives- things we want the player to accomplish
+    * Not every game necessarily has these but most do
+    * Multiple objectives with different layers of immediecy
+    * Short term goals are good for quick easy accomplishment
+    * Long term is the long fight, get good then approach it
+    * Objectives range from point totals, beating levels, beating the whole game, unlocking gates in a level, etc
+    * There are typically primary (required) objectives and secondary objectives
+    * Do we want objectivs that conflict with each other? Choose one objective or the other? 
+        * This builds decisions and can feel more immersive 
+        * also can be frustrating if it means some goals are then incompletable
+* Relationships between players
+    * Single player attempts to achieve the objectives of the game, not interacting with other players. Single player games
+    * Multiplayer- all players in the game exist in the same world but don't interact with each other at all 
+    * Cooperative play- everyone working together towards some objective
+    * Player vs Player- somebody wins somebody loses
+    * Multilateral competition- Everyone is against everyone else to defeat all others
+    * Unilateral competition- one person versus everyone else
+    * Team competition- players divide into multiple teams and attempt to beat other teams
+* Rules- description of what actions the player may take
+    * Defines actions taken and response at the given 
+* Boundaries- distinction between game ends and real world begins
+    * Boundary between real world and fake world 
+    * Ex- poker can directly affect your wallet
+* Resources- things of value that players collect
+    * Extra lives, coins, etc
+* Spaces- virtual world that is played in
+    * Could have an overworld to get between levels, levels themselves are then different worlds too 
+    * "Is this easy to navigate?"
+* Tables- keeping track of the math that happens behind game events
+    * Figure out the math behind random events, hits/misses
+    * Gaining/losing resources
+* Senses
+    * Vision- the graphics
+    * Hearing- sound effects, music
+    * Touch- some games effect touch, how we use a controller, rumble effects
+    * Smell or taste? Probs not gonna apply
+* Goals of inscribed aesthetics
+    * Set a different mood depending on the situation
+    * Need to be able to differentiate between good and bad players
+* Inscribed Narrative- background in which the story occurs
+    * Start with a premise- should be brief 2 or 3 sentences
+    * Setting- much more detail
+        * Where
+        * When
+        * What is the culture? The technology?
+    * Characters- do they have goals, personalities
+    * Plot- things taking place during the game
+        * Exposition>Rising action> Climax> falling action> denoument (wraps up story)
+        * In a play, each of these things would be equal length but recently the ends of a game are much shorter. The climax of the story may even be in the last 20 minutes
+        * Another take is the three-act structure
+            * Act 1: hook>incident>1st plot point
+            * Act 2: most of the story, do a lot, do everything>2nd plot point, longest part of story
+            * Act 3: resolution
+        * Linear narrative: no choice in story but they achieve what you want them to achieve eventually
+        * Limited choices- The player must explicitly choose between several specific options
+        * Factions and morals- players actions subtly add to or subtract form counters, may not be clear that you're effecting the narrative
+            * These things all add up to the narrative 
+        * Side quests- basically have linear narrative but also have other things to optionally do, and don't effect overall story
+    * Player/character
+        * Roleplaying- we're clearly different from the person we're playing as but we pretend to be them
+        * Silent protagonist- player decides for themselves how the in-game persona will be with personality
+        * Malleable protagonist- decide how player will respond. Pick kind of mean thing etc
+    * Inscribed narrative- purpose
+        * Evoking emotion
+        * Motivation and justification
+        * We aren't just wandering around for no reason, we need purpose to move and act in this world 
+        * Positive plot encouraging achievement
+    * Technology
+#### Designing rules of the game
+* Design process:
+    1. Make up rules
+    2. Quickly build a prototype
+    3. Extensively playtest your prototype
+    4. Analyze the results of playtesting
+    5. Make small incremental changes
+    6. Return to step 3, keep iterating
+    * Is the difficulty fair?
+    * Do players behind have a chance to catch up?
+    * Is it fun?
+    * Is it fun when its not your turn?
+    
