--- a/_includes/420/8-29-2019.md
+++ b/_includes/420/8-29-2019.md
@@ -4,3 +4,259 @@
   <source src="/Audio/420-8-29-2019.mp3" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+
+## Software Dev Processes
+### Software Engineering layers
+* Process: framework of the required tast
+  * How do we solve problems?
+* Methods: Technical "how to"
+  * Implementing code, testing
+* Tools: Automate processes and methods
+  * How can we automate these things?
+
+#### Traditional method: Waterfall Process
+* Gather requirements: what are we trying to do?
+* Specify how to adhere to the requirements
+* Discuss how we want to design specification
+* Implement that design 
+* Integrate product
+* **We test throughout the entire process**
+* We can only propagate changes after every step is done
+##### The Waterfall workflow:
+1. Start with an "abstract thing", gradually figuring out what it should do
+  * Raw list of wants/features
+  * Create written artifact
+  * Talk to customers when possible! 
+    * They may not know exactly what they want 
+  * We don't want to build the wrong thing! 
+    * Don't wanna write down wrong thing
+    * Can't have an incomplete software
+  * Gather information
+  * Mostly customer oriented 
+2. Specification
+  * Unify abstract entities 
+  * **Written description of what the system does**
+    * Needs to encompass all circumstances and all inputs in **every** possible state
+    * Need to brainstorm different scenarios
+      * User clicks then action happens. Then when they click again a sub-action happens. 
+  * Written document, another artifact
+  * Each sprint will result in new expected behavior in the specification
+  * Comprehensive, not just list of requirements, rather a high level of how we should be concerned
+3. Design
+  * System architecture
+  * Decompose system into **modules** that **should** be as independent as possible from one to another
+    * Does not necessarily happen much in reality do to things like scaling 
+    * Perhaps a more reasonable idea is that subsets of these modules are completely independent
+    * Specify interfaces between modules
+    * Some modules will never need to communicate
+      * EX: View knows about the model but not the other way around
+  * Emphasis on **how** the system works rather than what it does
+4. Implementation
+  * Code up the design
+  * Have code implemented
+  * Need a plan- order that the tasks are performed in
+    * Priority is a great way to order tasks
+    * Testability- **never** write code we can't test. Need a measure of success! (Otherwise will never finish)
+      * Need to be able to individually test each module
+      * Module tests must be able to be isolated: don't **need** 2 modules implemented just to test them. 
+5. Integration
+  * Put the pieces together and watch it work
+  * Quality Assurance people are now able to test all the integration between every single module and how they work together
+    * Quality Assurance (QA) people are testing from the design spec
+    * They do not test individual modules, they focus on interactions between them
+  * What do we do when integration fails?
+    * Trying to release a product
+    * Fix it.
+6. Product
+   * Ship it
+   * Things will break
+   * Maintain it!
+
+##### Waterfall Opinions
+Waterfall model **was** standard Software Dev for over 20 years. 
+* There is **no** iteration or feedback between stages
+* Can't change your design!
+  * Can't ship a broken product
+  * Have to essentially start at square 1 every time
+  * Clients can't request quick fixes, they have to wait 
+  for the next cycle
+* Risks
+  * Relies heavily on accurate assessment of requirements
+  * Little feedback from users until after shipped
+  * Problems aren't found until super late
+  * Working version isn't seen until integration 
+  * Programmers aren't doing anything until design is ready, could be weeks of wasted time
+* Model was adopted from the Engineering field
+  * Great way to build a bridge
+* Very little software is still built using this model
+* There are good aspects
+  * Continuous testing
+  * Emphasis on spec/design/testing
+  * Emphasis on communication
+## Why is time important 
+* The world changes
+* Technologies quickly become obsolete
+* Other people produce competitive software
+* Short term world will not change but we need to constantly evolve
+  * need to make near-term predictions
+### Rapid Prototyping
+* Write super quick prototype
+* Show users and get immediate feedback 
+* Then proceed to waterfall model
+* Customer feels more cared about
+* Hard to throw away that prototype
+  * We should design it from scratch because it will be so much better
+  * If we know it can be better than we need that well designed and maintainable code
+* Prototype can expose design mistakes!
+  * We then know to make those corrections
+### Still not how it goes in reality
+* Need feedback between stages
+* Perhaps be able to dial things back, simplify things during the process
+* Final product even could lead to changes in requirements
+* Need waterfall model with **feedback loops**
+* What do we do? 
+  * Accept that later stages influence earlier stages
+  * Need to plan for that and make sure its feasible
+  * Every successful company minimizes risk and maximizes profits 
+    * The scope of this course is to minimize risk
+### Iterative Models: Plan for Change
+* Use the same stages as the waterfall model
+but plan to iterate the whole cycle several times
+  * Typically 2 or 3 iterations per sprint
+  * Every cycle is known as a build
+  * Smaller and faster than entire product
+  * After every loop we have a fully spec compliant code, fully tested
+  * Don't do a lot in each iteration
+    * Perhaps implement one feature and test the heck out of it 
+    * Very interesting process to begin with
+    * 2 people perhaps assigned to every task, any given time you're working on 2 tasks: feature that is individual and another task is integration that takes other features and makes sure that they integrate well. 
+      * The team as a whole plans planning and requirements  
+      * Analysis and design is only a couple people
+      * Evaluation is only other couple people
+      * Idea is to knockout one feature every single week
+1. Gather Requirements
+  * Same was as before, talk to users and find whats needed
+  * Start of every spring we will be given requirements
+  * Recognize diminishing returns: If something will take forever then hold off for a while, then the team as a whole can tackle it 
+  * Always **need** something to show the customer
+    * Need to have an idea of where to evolve
+2. Spec
+  * Same as before
+3. Design
+  * Decompose into modules
+  * What could change? Interfaces are a great idea since we don't care ab implementation detail just API
+  * Plan incremental development in each module 
+  * from skeletal component to full functionality
+  * Most to least critical features
+  * During Build 1: 
+    * All skeletal pieces are there but they don't do much
+    * UI is not done in build 1
+    * Recommendation: whenever something needs displayed then just console log, don't need buttons immediately
+4. Implementation
+  * Always have demo after build 1
+  * Communication
+  * Each build adds more functionality 
+5. Integration
+  * integration and major test for each build
+  * Ready to verify all integration
+  * QA ensures everything works as expected
+Advantages:
+  * Find problems sooner
+  * See progress
+  * More quantifiable!
+Disadvantages:
+  * More complicated
+  * Major mistake in requirements/spec/design is disaster
+  * We code before problem is fully understood
+    * Trade off for risk of being slow
+In practice:
+  * Most consumer software dev uses the iterative model
+    * Daily builds
+    * System always working
+  * People in our field are the ones using iterative, while business people may not be as inclined
+#### Summary
+* Iterative is the way to go
+* Extreme programming, agile process, next 
+
+### Extreme Programming (XP)
+* Version of the iterative model
+* Goals
+  * Minimize unnecessary work
+  * Maximize communication and feedback
+  * Make sure devs do most important work
+  * Make system flexible, ready to meet any change in requirements
+#### History
+* 1999: from Kent Beck 
+* Speed to market, rapidly changing requirements
+#### XP Practices
+* On site customer
+* Planning game
+* small releases
+* Testing
+* Simple design
+* Refactoring
+* Metaphor
+* Pair programming
+* Collective ownership
+* Continuous integration- We will have Github unit test our code on a pull request, and it will not merge unless passed
+* 40 hour weeks (Not applying to us, ours is more like 10)
+* Coding standards- We all define formatting guidelines and naming conventions
+  * Look into a **linter** which will not let us merge unless code is up to defined standard
+#### XP Process: Multiple Short cyles (2 weeks)
+1. Meet with client to elicit requirements
+2. Planning game
+  * Take what user wants and break up into individual tasks
+  * Estimate time cost
+3. Implementation
+  * Write programmer tests first
+  * Simplest possible design to pass the tests
+  * Code in pairs (Preferred because then 2 people understand their given section of code)
+  * Occasional refactor the code 
+4. Evaluate progress and reiterate from step 1
+* Its like iterative but pushed to the extreme
+#### XP Customer
+* expert customer is part of the team
+  * On site, always available
+  * Communication and feedback
+  * Make sure we build what the client wants
+* Customer involved active in all stages
+  * Clarifies requirements
+  * Negotiates with the team what to do next
+  * Writes and runs acceptance tests
+  * Constantly evaluates versions 
+  * How often is this feasible?
+    * Totally depends.
+#### Planning game: Writing Stories
+* Write on index cards
+  * Meaningful title and short description of what customer wants (or what we think they want)
+* Focus on What, not why or how
+* Use client language- Client must be able to test if a story is completed 
+* Don't need all stories in first iteration
+##### Example:
+* CEO needs accounting software for Accounting software. 
+  * Need to be able to make account
+  * Delete
+  * Query balance
+  * List accounts
+* Currently don't care about how or why, just What
+* Story 1 
+  * Title: Create account
+  * Description: I can create a named account
+* Story 2
+  * List accounts
+  * Desc: I can get a list of accounts
+  * "But how will that display?"
+  * Modify description to answer that question
+* We gradually stipulate additional requirements
+* Customer needs to describe how the stories will be tested
+  * This is a simple description of their expectations when using the software
+  * "When I do this I expect this"
+  * "When I do bad action I expect this error"
+  * We need to be able to make tests based on their description
+* Tasks- Developer centered Description
+  * Every story is broken into tasks
+  * Easy to split up work
+  * Can't all work on same thing
+  * Some stories may break down into many tasks while others possibly only 1
+  * Only breakdown enough to estimate cost
+  * Validate with customer
