--- a/_includes/450/9-6-2019.md
+++ b/_includes/450/9-6-2019.md
@@ -1,4 +1,10 @@
 #### _9-6-2019_
+<audio controls>
+  <source src="/Audio/450-9-6-2019.mp3" type="audio/mpeg">
+Your browser does not support the audio element.
+</audio>
+
+
 
 ## Solving Problems by Searching
 ### Types of agents
@@ -109,5 +115,5 @@
     * DFS
     * Iterative deepening search
     * Uniform-cost search
-    
+
 
