--- a/_includes/420/9-10-2019.md
+++ b/_includes/420/9-10-2019.md
@@ -1,2 +1,52 @@
 #### _9-10-2019_
 
+## Kanban
+* Not restricted to Software Dev
+* Business Process
+* Can't do more work than capable of doing, but we are only capable of x amount of work
+* Kanban cards act as placeholders of things we can do 
+* Example- Simulate a Process using Kanban
+    1. Draft a proposal for a project
+    2. Process- Once accepted you have room in deciding what works best
+        * Can decide what works best based on studying different methods
+        * Develop a set of directions to follow
+    3. Actual Execution
+* Why are we using Kanban?
+    * Iterative development has challenges- how do we divide work up?
+    * Forward thinking too much could mean we lose focus on work for right now
+    * Quality suffers as deadlines are approaching and rushing happens
+    * Kanban encourages continuous flow- by the time the next sprint starts we already have to know what to work on
+* How do we setup Kanban?
+    * Github has issues in the development category
+    * These "boxes" should incrementally move towards development, and if they need reverted only revert one step back 
+
+1. Determine acceptance criteria for a story (what makes it done)
+2. Develop
+3. Test
+4. Deploy everything related to a story at the same time
+
+* Do not revisit a user story
+* Project managers can give an expedite track for prioritized task 
+* Important thing about visible goals on board- promotes focus
+
+* Feature to develop->Tasks in queue->in progress tasks->tasks complete->Once all complete then feature is complete
+
+## GIT
+
+* Git add, commit and push may be useful in personal projects but in a group setting not necessarily the case
+* Add- Takes changes and adds them to staging area 
+* Commit- Takes files from staging and commits (adds) to the repository
+* Push- Takes your whole local repo and copies to remote repo
+* Clone- Take remote repo and clone it into your local environment
+* Tracked files- Belong to local repo
+* Untracked files- .bin, temp files, useless things that we don't need
+* Pull- aggregate of 2 commands- fetch followed by merge
+* Fetch- Updates local repo with info from remote
+* Merge- 
+* Dirty working directory- keep files that we don't wanna get rid of yet (not important)
+* **Only commit code that compiles**
+* How to write a git commit message- brief description of changes, possibly add things like [hotfix] 
+* git log --oneline
+* git blame: see who wrote a line of code
+* Daily scrum- this is what I've done, this is what I need to do, this is what is blocking me
+
