--- a/_includes/475/9-17-2019.md
+++ b/_includes/475/9-17-2019.md
@@ -1,3 +1,251 @@
 #### _9-17-2019_
 
-Hello 
+## Scripting
+* We will be using C# 
+* Scripts must be attached to Game Objects to do anything
+* EVery script is a class that extends MonoBehaviour
+* Super similar to Java and C++
+### Overriding Methods 
+* We will be overwriting methods
+* Updated() is called once for every frame, most logic is here
+    * Only gets called on enabled objects
+    * Default objects are disabled
+* Start is called once for each object, once before the first Update
+* LateUpdate called once for every frame **after** every scripts Update has concluded
+    * Code that will definitely happen after update has happened
+* FixedUpdate- called every 20ms- Used when precise timing is required like for physics calculations
+* Awake- called once when the game begins, before any Starts
+    * Before game starts every object gets Awake, then active ones get Start
+* OnSomething- responses to things happening
+    * OnCollision- called automatically on every frame that my object touches something else 
+* Good idea to have Assets/Scripts folder
+
+### C# Overriding MonoBehaviour
+```c#
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+
+public class HelloWorld : MonoBehavior
+{
+    public void Start(){
+        // Unity syntax
+        print("Hello world");
+    }
+
+    public void Update(){
+        print("update");
+    }
+
+    public void LateUpdate(){
+        print("Late Update");
+    }
+
+    public void Awake(){
+
+    }
+
+    public void FixedUpdate(){
+
+    }
+}
+```
+
+### Attaching Script to Game Object
+* Under our game object we can attach a component and select our new script saved in Assets/Scripts
+* Click on the console and see that it is printing 
+    * Notice many fixed updates in a row
+
+### Adding fields to class 
+```c#
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+
+public class HelloWorld : MonoBehavior
+{
+    int timer;
+
+    public void Start(){
+        // Unity syntax
+        print("Hello world");
+    }
+
+    public void Update(){
+        print("update");
+        timer++;
+    }
+
+    public void LateUpdate(){
+        print("Late Update");
+    }
+
+    public void Awake(){
+        timer = 0;
+    }
+
+    public void FixedUpdate(){
+
+    }
+}
+```
+
+### Transforming an Object
+* MonoBehaviour Class has property named transform, accessed just like a member field 
+* transform is of type Transform
+* Transform Class
+    * Method Translate- 3 float params
+    * Method Rotate- three floats
+    * Property localScale which IS a Vector3
+* Lets randomly rotate object
+```c#
+using System.Collections;
+using System.Collections.Generic;
+using UnityEngine;
+using System.Random;
+
+public class RandomTransformer : MonoBehavior
+{
+    private int counter;
+    private System.Random r;
+    public void Start(){
+        
+    }
+
+    public void Update(){
+        if (counter % 100 == 0){
+            // Supply next with upper bound
+            int transformType = r.Next(3);
+            // Transform by translating on x axis
+            if (transformType == 0){
+                int direction = r.Next(2);
+                if (direction == 0){
+                    //Recommended to use Floats in unity
+                    transform.Translate(-1.0f, 0.0f, 0.0f);
+                } else {
+                    transform.Translate(1.0f, 0.0f, 0.0f);
+                }
+            // Now we rotate if this is picked
+            } else if (transformType == 1){
+                int direction = r.Next(2);
+                if(direction == 0){
+                    // degrees
+                    transform.Rotate(0.0f, -45.0f, 0.0f);
+                } else {
+                    transform.Rotate(0.0f, 45.0f, 0.0f);
+                }
+            // else scale
+            } else {
+                // gives number between 0 and 1 typically, we make it 0 and 2
+                float xScale = (float)r.NextDouble() * 2;
+                float yScale = (float)r.NextDouble() * 2;
+                float zScale = (float)r.NextDouble() * 2;
+                Vector3 newScale = new Vector3(xScale, yScale, zScale);
+                transform.localScale = newScale;
+            }
+        }
+        counter++;
+    }
+
+    public void Awake(){
+        counter = 0;
+        random = new System.Random();
+    }
+
+}
+```
+
+### MonoBehaviour GetComponent
+* Method GetComponent<Type> returns the component or null if there is non
+* Components generally have properties matching all the things you see in the Inspector when looking at them
+* Renderer has property material, whose type is Material
+* Material has property color, whose type is Color
+* Color class has properties r, g, b
+
+```c#
+public class GradualColorChange : MonoBehaviour{
+    Renderer rend;
+
+    void Awake(){
+        rend = GetComponent<Renderer>();
+    }
+
+    void Update(){
+        if (rend != null){
+            Material material = rend.material;
+            Color color = material.color;
+            color.r = 1.0f;
+            // Alpha- controls transparency
+            color.a = 1.0f;
+            material.color = color;
+        }
+    }
+}
+```
+
+### Accessing Other Objects
+* Create public field of type GameObject which also has GetComponent and transform
+* Attach script to something, that field becomes editable in Inspector
+* Grab object to fill it
+
+```c#
+public class MoveWhenOtherIsBlue : MonoBehaviour{
+    public GameObject colorChanger;
+    void Start(){
+
+    }
+    void Update(){
+        Renderer rend = colorChanger.GetComponent<Renderer>();
+        if (rend.material.color.b == 1.0f){
+            
+        }
+    }
+
+}
+```
+
+### Simple Input
+* Need input to make the game respond
+* Input.GetKey(KeyCode.A) says whether A is pressed or not
+    * At this time is that key down or not?
+* Input.GetKeyDown(...)
+    * Did someone **start** pressing on this frame, only true the first time 
+* Input.GetKeyUp
+    * Is the key up for the first time since down now?
+* Let's make a script to change objects color based on key press
+
+```c#
+public class InputColorChange...{
+    private Renderer rend;
+
+    void Start(){
+
+    }
+
+    private void Awake(){
+        rend = GetComponent<Renderer>();
+
+    }
+
+    void Update(){
+        if (rend != null){
+            // If r is pressed
+            if (Input.GetKeyDown(KeyCode.R)){
+                rend.material.color = new Color(1.0f, 0.0f, 0.0f, 1.0f);
+            } else if(Input.GetKeyDown(KeyCode.G)){
+                rend.material.color = //green one;
+            }
+            } else if(Input.GetKeyDown(KeyCode.B)){
+                rend.material.color = //blue one;
+            }
+        }
+    }
+}
+```
+
+### Axis based input
+* "Horizontal" mapped to a-d
+* "Vertical" mappes to w-s
+* "Fire1" mapped to control and left mouse
+* Mouse X and Mouse Y
+* Call Input.GetAxis("Horizontal") returns number between -1 and 1
